--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -71,7 +71,7 @@
 										</div>
 										<div class="matchs-info " [ngClass]="isMultipleMatches ? 'd-none' : ''" >
 											<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
-											<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
+											<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
 											<!--<button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button>-->
 											<button (click)="onReset()" class="btn btn-sm btn-light ml-1">
 												<i class="fas fa-sync"></i>
@@ -124,7 +124,7 @@
 										</div>
 										<div class="matchs-info "  [ngClass]="isMultipleMatches ? 'd-none' : ''" >
 										  <button (click)="onShowMatches()" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
-										  <button (click)="onShowMissing()" class="missBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
+										  <button (click)="onShowMissing()" class="missBtn btn-sm btn btn-fltr btn-light "><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
 										  <!-- <button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button> -->
 										  <button (click)="onReset()" class="btn btn-sm btn-light ml-1">
 										  <i class="fas fa-sync"></i>
