--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -225,7 +225,23 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='0'">
 				 <ul class="list-group">
 					<li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization)">
+						<span *ngIf="matchedElement && (jobInfo?.country == userInfo?.country || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
+							<div *ngIf="jobInfo?.country == userInfo?.country">
+							<i class="fa fa-check text-green "></i>  I am a Citizen
+							  </div>
+							  <div *ngIf="jobInfo?.country != userInfo?.country">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							  </div>
+						</span>
+						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+							 <i class="fa fa-times text-danger "></i>
+							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
+							 0)
+							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
+							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+						</span>
+                        <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
@@ -234,11 +250,7 @@
                           <i class="fa fa-times text-danger "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
-                          <!-- {{(jobInfo.work_authorization || jobInfo.work_authorization ==
-                            0)
-                            ? (jobInfo.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-                            translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}} -->
-                        </span>
+                        </span> -->
                       </li>
 				</ul>
 			</div>
@@ -610,7 +622,23 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='1'">
 				 <ul class="list-group">
 					<li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization)">
+						<span *ngIf="matchedElement && (jobInfo?.country == userInfo?.country || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
+							<div *ngIf="jobInfo?.country == userInfo?.country">
+							<i class="fa fa-check text-green "></i>  I am a Citizen
+							  </div>
+							  <div *ngIf="jobInfo?.country != userInfo?.country">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							  </div>
+						</span>
+						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+							 <i class="fa fa-times text-danger "></i>
+							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
+							 0)
+							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
+							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+						</span>
+                        <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
@@ -619,11 +647,7 @@
                           <i class="fa fa-times text-danger "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
-                          <!-- {{(jobInfo.work_authorization || jobInfo.work_authorization ==
-                            0)
-                            ? (jobInfo.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-                            translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}} -->
-                        </span>
+                          </span> -->
                       </li>
 				</ul>
 			</div>
@@ -997,7 +1021,23 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization=='2'">
 				 <ul class="list-group">
 					<li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization)">
+						<span *ngIf="matchedElement && (jobInfo?.country == userInfo?.country || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
+							<div *ngIf="jobInfo?.country == userInfo?.country">
+							<i class="fa fa-check text-green "></i>  I am a Citizen
+							  </div>
+							  <div *ngIf="jobInfo?.country != userInfo?.country">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							  </div>
+						</span>
+						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+							 <i class="fa fa-times text-danger "></i>
+							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
+							 0)
+							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
+							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+						</span>
+                       <!--  <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
@@ -1006,11 +1046,7 @@
                           <i class="fa fa-times text-danger "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
-                          <!-- {{(jobInfo.work_authorization || jobInfo.work_authorization ==
-                            0)
-                            ? (jobInfo.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-                            translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}} -->
-                        </span>
+                         </span> -->
                       </li>
 				</ul>
 			</div>
@@ -1161,11 +1197,6 @@
 			<div class="pj-title " *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					{{"dashboard.otherPreferences" | translate }}
-				 </h6>
-			</div>
-			<div class="pj-title mt-2" *ngIf="isMultipleMatches" >
-				<h6 class="mb-0" type="button">
-					
 				 </h6>
 			</div>
 		</div>
@@ -1384,7 +1415,23 @@
 			<div class="  info-box" *ngIf="jobInfo.match_select?.work_authorization==''">
 				 <ul class="list-group">
 					<li class="list-group-item">
-                        <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization)">
+						<span *ngIf="matchedElement && (jobInfo?.country == userInfo?.country || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
+							<div *ngIf="jobInfo?.country == userInfo?.country">
+							<i class="fa fa-check text-green "></i>  I am a Citizen
+							  </div>
+							  <div *ngIf="jobInfo?.country != userInfo?.country">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iHaveWorkAuthorization" | translate}}
+							  </div>
+						</span>
+						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+							 <i class="fa fa-times text-danger "></i>
+							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
+							 0)
+							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
+							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+						</span>					
+                        <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
@@ -1393,11 +1440,7 @@
                           <i class="fa fa-times text-danger "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
                             0) ? (jobInfo.work_authorization == 0 ? ("postJob.shouldBeACitizenPr" | translate) : ("postJob.shouldBeHavingAWorkPermit" | translate)) : '--'}}
-                          <!-- {{(jobInfo.work_authorization || jobInfo.work_authorization ==
-                            0)
-                            ? (jobInfo.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-                            translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}} -->
-                        </span>
+                        </span> -->
                       </li>
 				</ul>
 			</div>
