--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -1297,7 +1297,7 @@
 			</div>
 		</div>
 		
-		<div class="accordion" *ngIf="IsShown">
+		<div class="accordion" *ngIf="IsShown && !isMultipleMatches">
 			<div class="pj-title " >
 				<h6 class="mb-0" type="button">
 					{{"postJob.perksBenfits" | translate}}
