--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -1147,7 +1147,7 @@
 					</div>
 				</div>
 			</div>
-			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='' && postedJobsDetails?.work_authorization ">
+			<div *ngIf="postedJobsDetails?.match_select?.work_authorization=='' ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
