--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -18,7 +18,7 @@
               <ng-container *ngIf="appliedJobs?.length; else elseTemplate">
                 <tr *ngFor="let item of appliedJobs">
                   <td>
-                    <a [routerLink]="[ '/user/candidate-job-view/details', item?.job_posting?.id ]" class="text-capitalize" href="javacript:;">
+                    <a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id:item?.job_posting?.id,path:'applied' }"  class="text-capitalize" href="javacript:;">
                       {{item?.job_posting?.title}}
                     </a>
                   </td>
