--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 				</div>
-				<app-shared-job-profile [jobInfo]="postedJobsDetails"  [isMultipleMatches]="isMultipleMatches" 
+				<app-shared-job-profile [jobInfo]="postedJobsDetails"  [isMultipleMatches]="isMultipleMatches"[isHideData]="isHideData" 
 					[fieldsExclude]="{salary: false, visa_sponsorship: false, end_to_end_implementation: true}">
 				</app-shared-job-profile>
 			</div>
