--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -229,12 +229,16 @@
 							<div *ngIf="jobInfo?.country == userInfo?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="jobInfo?.country != userInfo?.country">
+							  <div *ngIf="jobInfo?.country != userInfo?.country && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
 								{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
+							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != userInfo?.country && userInfo?.work_authorization == 1 ">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							  </div>
 						</span>
-						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
@@ -626,12 +630,16 @@
 							<div *ngIf="jobInfo?.country == userInfo?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="jobInfo?.country != userInfo?.country">
+							  <div *ngIf="jobInfo?.country != userInfo?.country && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
 								{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
+							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != userInfo?.country && userInfo?.work_authorization == 1 ">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							  </div>
 						</span>
-						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
@@ -1025,12 +1033,16 @@
 							<div *ngIf="jobInfo?.country == userInfo?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="jobInfo?.country != userInfo?.country">
+							  <div *ngIf="jobInfo?.country != userInfo?.country && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
 								{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
+							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != userInfo?.country && userInfo?.work_authorization == 1 ">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							  </div>
 						</span>
-						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
@@ -1419,18 +1431,22 @@
 							<div *ngIf="jobInfo?.country == userInfo?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="jobInfo?.country != userInfo?.country">
+							  <div *ngIf="jobInfo?.country != userInfo?.country && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
 								{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
+							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != userInfo?.country && userInfo?.work_authorization == 1 ">
+								<i class="fa fa-check text-green "></i>
+								{{"postYourResume.iNeedVisaAponsorship" | translate}}
+							  </div>
 						</span>
-						<span *ngIf="missingElement && (userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
+						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != userInfo?.country )">
 							 <i class="fa fa-times text-danger "></i>
 							 {{(userInfo?.work_authorization || userInfo?.work_authorization ==
 							 0)
 							 ? (userInfo?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
 							 translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
-						</span>					
+						</span>				
                         <!-- <span *ngIf="matchedElement && (jobInfo.work_authorization == userInfo?.work_authorization || jobInfo.work_authorization == 2 )">
                           <i class="fa fa-check text-green "></i>
                           {{(jobInfo.work_authorization || jobInfo.work_authorization ==
